# KEngine

./: .gitignore  CMakeLists.txt  Delete.txt  GenerateSolution.bat  README.md
src/: CMakeLists.txt  KAppEntry_Win32.cpp  KAppFramework.h  KAppFramework_Windows.cpp  KAppFramework_Windows.h  premake5.lua
src/KAdapter/: KAdapterFactory.h  premake5.lua
src/KAdapter/GraphicsAdapter/: KGraphicsAdapter.h  KGraphicsAdapter_OpenGL.cpp  KGraphicsAdapter_OpenGL.h
src/KAdapter/TimerAdapter/: KTimerAdapter.h  KTimerAdapter_Windows.cpp  KTimerAdapter_Windows.h
src/KCore/: KMacro.h  KMath.h  KMatrix.h  KMemory.cpp  KMemory.h  KPlane.h  KTypes.h  KVector.h  precompiled_Core.cpp  precompiled_Core.h  premake5.lua
src/KEngine/: CMakeLists.txt  KComponentBase.h  KComponent_Transform.h  KShaderManager.cpp  KShaderManager.h  KSingletonManager.cpp  KSingletonManager.h  KSingletonTemplate.h  premake5.lua
src/KFrameworkAI/: AIBehaviorDelegate.h  AIBehaviorEnums.h  AIBehaviorTree.cpp  AIBehaviorTree.h  AIBlackboard.cpp  AIBlackboard.h  AIBlackboardKeyType_Common.h  IBehaviorCallee.h  premake5.lua
src/KFrameworkAI/AIBehavior/: AIActionBind.cpp  AIActionBind.h  AIActionTask.cpp  AIActionTask.h  AIBehavior.cpp  AIBehavior.h  AIBehaviorStatus.h  AIComposite.cpp  AIComposite.h  AICondition.cpp  AICondition.h  AIDecorator.cpp  AIDecorator.h  AIParallel.cpp  AIParallel.h  AIPrioritySelector.cpp  AIPrioritySelector.h  AISelector.cpp  AISelector.h  AISequence.cpp  AISequence.h  IBehavior.h  IBehaviorCallee.h
src/KFrameworkAI/AIBehaviorMocks/: AIMockBehavior.cpp  AIMockBehavior.h
src/KFrameworkAI/AIBlackboardKeys/: AIBlackboardKeyType_Base.cpp  AIBlackboardKeyType_Base.h  AIBlackboardKeyType_Boolean.cpp  AIBlackboardKeyType_Boolean.h  AIBlackboardKeyType_Float.cpp  AIBlackboardKeyType_Float.h  AIBlackboardKeyType_Integer.cpp  AIBlackboardKeyType_Integer.h  AIBlackboardKeyType_Object.cpp  AIBlackboardKeyType_Object.h  AIBlackboardKeyType_String.cpp  AIBlackboardKeyType_String.h  AIBlackboardKeyType_Vector.cpp  AIBlackboardKeyType_Vector.h
src/KUnitTestGoogle/: main_gtest.cpp  premake5.lua  unittest_AIBehavior.h
